fixed navbar to top, fixed navbar overlap scroll, additional styling to indexpage, navbar and a little styling to footer

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -106,10 +106,14 @@ h3, p {
 // all other pages nav-bar styling
   // * Made changes for navbar to wrap fully to edges of screen - Daria * //
 .nav-container-pages.container-fluid {
-    background-color: #F7CAC7;
-    padding-bottom: 10px;
-    align-items: center;
-    width: 100%;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+
+  background-color: #F7CAC7;
+  padding-bottom: 10px;
+  align-items: center;
+  width: 100%;
     .navbar-left {
       a {
         color: #360719;
@@ -131,12 +135,10 @@ h3, p {
   }
 }
 
-div.navbar-left {
-  font-family: ‘Marko One’, serif;
-  
-}
 
 // Index page styling
+
+// * All colours are placwholders atm - Daria
 .index-wrapper.container-fluid {
   background-color: $primaryGrey;
   // hero section 
@@ -146,10 +148,10 @@ div.navbar-left {
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
-      padding: 100px;
+      // padding: 100px;
     }
     .index-hero-txt {
-      background-color:$primaryPink; //placeholder colour
+      background-color: $primaryYellow; 
       text-align: center;
       padding: 100px;
       p {
@@ -186,19 +188,24 @@ div.navbar-left {
     // overflow-y: scroll;
     .api-row {
       justify-content: center;
+      margin-left: 15px;
+      margin-right: 15px;
       // justify-content: space-between;
     }
     .card {
       max-width: 300px;
       margin-bottom: 30px;
+      margin-left: 15px;
+      margin-right: 15px;
       border: none;
     }
       .card-header {
         background-color:$primaryPink;
       }
       .card-btn {
-        text-align: center;
-        .btn{
+        align-items: center;
+        .btn {
+          align-items: center;
           background-color: $primaryBlue;
           color: $primaryBrown;
           border: none;
@@ -363,9 +370,9 @@ div.card-group {
 // .card:not(:last-child) {
 //   margin-right: 30px;
 // }
-.card:not(:last-child) {
-  margin-right: 30px;
-}
+// .card:not(:last-child) {
+//   margin-right: 30px;
+// }
 
 // .card:not(:first-child) {
 //   margin-right: 30px;
